sacffolded create-chat-message
