# x/chat/keeper/msg_server_create_chat_message.go
@@ -1,0 +1,17 @@
+package keeper
+
+import (
+	"context"
+
+	"chatty/x/chat/types"
+	sdk "github.com/cosmos/cosmos-sdk/types"
+)
+
+func (k msgServer) CreateChatMessage(goCtx context.Context, msg *types.MsgCreateChatMessage) (*types.MsgCreateChatMessageResponse, error) {
+	ctx := sdk.UnwrapSDKContext(goCtx)
+
+	// TODO: Handling the message
+	_ = ctx
+
+	return &types.MsgCreateChatMessageResponse{}, nil
+}
